/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package risiko;

/**
 *
 * @author Annachiara
 */
public enum TipoObiettivo {
    ARMATE,CONTINENTI,NUMERO_TERRITORI,TORNEO;
}
