@startuml
annotation java.lang.Override
class enums.TipoArma
class enums.TipoColore
class enums.TipoContinente
class enums.TipoObiettivo
class java.util.ArrayList
class java.util.Objects
class model.CarteArmiPartita
class model.Giocatore
class model.Obiettivo
class model.ObiettivoPartita
class model.Territorio
class model.TerritorioDettagliato
class model.TerritorioPartita
interface java.lang.Comparable
model.CarteArmiPartita ..> java.lang.Override
model.CarteArmiPartita ..> enums.TipoArma
model.CarteArmiPartita ..> java.util.ArrayList
model.CarteArmiPartita ..> java.util.Objects
model.CarteArmiPartita --|> model.Territorio
model.Giocatore ..> java.lang.Override
model.Giocatore ..> enums.TipoColore
model.Obiettivo ..> java.lang.Override
model.Obiettivo ..> enums.TipoObiettivo
model.ObiettivoPartita ..> java.lang.Override
model.ObiettivoPartita ..> enums.TipoObiettivo
model.ObiettivoPartita --|> model.Obiettivo
model.Territorio ..> java.lang.Override
model.Territorio ..> enums.TipoArma
model.Territorio ..> java.util.ArrayList
model.Territorio ..> java.util.Objects
model.Territorio --|> java.lang.Comparable
model.TerritorioDettagliato ..> java.lang.Override
model.TerritorioDettagliato ..> enums.TipoArma
model.TerritorioDettagliato ..> enums.TipoContinente
model.TerritorioDettagliato ..> java.util.ArrayList
model.TerritorioDettagliato --|> model.Territorio
model.TerritorioPartita ..> java.lang.Override
model.TerritorioPartita ..> enums.TipoArma
model.TerritorioPartita ..> java.util.ArrayList
model.TerritorioPartita --|> model.CarteArmiPartita
@enduml